--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "archipelago.js": "^2.0.4",
     "lodash": "^4.17.21",
+    "next": "^15.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
@@ -14,10 +15,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "npx serve@latest ./build",
+    "build": "next build",
+    "dev": "next dev --turbopack"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.25.8",
+    "@types/react": "19.0.10",
     "gh-pages": "^6.3.0"
   }
 }
