--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,13 +20,16 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "incremental": true,
+    "module": "esnext"
   },
   "include": [
-    "next-env.d.ts",
-    "build/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "build/types/**/*.ts",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
