--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ap-tracker",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
-  "homepage": ".",
+  "type":"module",
   "dependencies": {
     "archipelago.js": "^2.0.4",
     "lodash": "^4.17.21",
@@ -15,7 +15,6 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "npx serve@latest ./build",
     "build": "next build",
     "dev": "next dev --turbopack"
@@ -39,7 +38,6 @@
   },
   "devDependencies": {
     "@types/node": "22.13.5",
-    "@types/react": "19.0.10",
-    "gh-pages": "^6.3.0"
+    "@types/react": "19.0.10"
   }
 }
