--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@next/eslint-plugin-next": "^15.2.2",
     "archipelago.js": "^2.0.4",
     "next": "^15.1.7",
     "nextjs": "^0.0.3",
@@ -18,11 +19,6 @@
     "build": "next build",
     "dev": "next dev"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -36,8 +32,13 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@types/node": "22.13.5",
     "@types/react": "19.0.10",
-    "@types/react-dom": "^19.0.4"
+    "@types/react-dom": "^19.0.4",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.26.1"
   }
 }
