--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ap-tracker",
-  "version": "0.1.11-alpha",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
   "dependencies": {
