Refactor Back End of text client

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nextjs": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-virtualized": "^9.22.6",
     "styled-components": "^6.1.11",
     "typescript": "^5.7.3"
   },
