--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "ap-tracker",
-  "version": "0.2.2",
-  "private": true,
-  "type": "module",
-  "dependencies": {
-    "@next/eslint-plugin-next": "^15.2.2",
-    "archipelago.js": "^2.0.4",
-    "next": "^15.1.7",
-    "nextjs": "^0.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-virtualized": "^9.22.6",
-    "react-window": "^1.8.11",
-    "styled-components": "^6.1.11",
-    "typescript": "^5.7.3"
-  },
-  "scripts": {
-    "predeploy": "npm run build",
-    "start": "npx serve@latest ./build",
-    "build": "next build",
-    "dev": "next dev"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@types/node": "22.13.5",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@types/react-virtualized": "^9.22.2",
-    "@types/react-window": "^1.8.8",
-    "eslint": "^9.22.0",
-    "eslint-plugin-react": "^7.37.4",
-    "globals": "^16.0.0",
-    "typescript-eslint": "^8.26.1"
-  }
+    "name": "ap-tracker",
+    "version": "0.2.2",
+    "private": true,
+    "type": "module",
+    "dependencies": {
+        "@next/eslint-plugin-next": "^15.2.2",
+        "archipelago.js": "^2.0.4",
+        "next": "^15.1.7",
+        "nextjs": "^0.0.3",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-virtualized": "^9.22.6",
+        "react-window": "^1.8.11",
+        "styled-components": "^6.1.11",
+        "typescript": "^5.7.3"
+    },
+    "scripts": {
+        "predeploy": "npm run build",
+        "start": "npx serve@latest ./build",
+        "build": "next build",
+        "dev": "next dev"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.22.0",
+        "@types/node": "22.13.5",
+        "@types/react": "19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@types/react-virtualized": "^9.22.2",
+        "@types/react-window": "^1.8.8",
+        "eslint": "^9.22.0",
+        "eslint-plugin-react": "^7.37.4",
+        "globals": "^16.0.0",
+        "prettier": "3.5.3",
+        "typescript-eslint": "^8.26.1"
+    }
 }
