--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,9 +21,18 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                  submodules: true
 
             - name: Setup Node.js - Cache dependencies - Install dependencies
               uses: ./.github/workflows/setup-node
+
+            - uses: oven-sh/setup-bun@v1
+            - name: Build archipelago.js
+              run: |
+                  cd external/archipelago.js
+                  npm i
+                  npm run build
 
             - name: Setup Pages
               uses: actions/configure-pages@v4
