--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "ap-tracker",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "private": true,
     "type": "module",
     "dependencies": {
         "@next/eslint-plugin-next": "^15.2.2",
-        "archipelago.js": "^2.0.4",
+        "archipelago.js": "file:external/archipelago.js",
         "next": "^15.1.7",
         "nextjs": "^0.0.3",
         "react": "^18.3.1",
