--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
     "name": "ap-tracker",
-    "version": "0.3.1",
+    "version": "0.3.2",
     "private": true,
     "type": "module",
     "dependencies": {
         "@next/eslint-plugin-next": "^15.2.2",
         "archipelago.js": "file:external/archipelago.js",
-        "next": "^15.1.7",
+        "eslint-config-next": "^15.4.5",
+        "next": "^15.4.5",
         "nextjs": "^0.0.3",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
         "react-virtualized": "^9.22.6",
         "react-window": "^1.8.11",
         "styled-components": "^6.1.11",
